--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "node-ssh": "^7.0.0",
+    "ora": "^4.0.3",
     "rsync": "^0.6.1",
     "typescript": "^3.7.5",
     "yargs": "^15.1.0"
