--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "crownie",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^3.1.1",
     "boxen": "^4.2.0",
     "chalk": "^3.0.0",
     "fs-extra": "^8.1.0",
@@ -27,6 +28,7 @@
     "yargs": "^15.1.0"
   },
   "devDependencies": {
+    "@types/archiver": "^3.0.0",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
