implement shipper server and uploading using http

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "rm -rf dist/ && tsc",
+    "server": "ts-node src/bin/index.ts start",
     "dev": "ts-node src/bin/index.ts deploy",
     "prettier": "prettier --write \"*(src|tests)/**/*.*(ts|tsx)\"",
     "test": "jest"
@@ -17,27 +18,43 @@
   "license": "MIT",
   "dependencies": {
     "archiver": "^3.1.1",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "boxen": "^4.2.0",
     "chalk": "^3.0.0",
+    "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
+    "inquirer": "^7.0.4",
+    "lodash.kebabcase": "^4.1.1",
+    "multer": "^1.4.2",
     "node-ssh": "^7.0.0",
     "ora": "^4.0.3",
+    "os": "^0.1.1",
     "rsync": "^0.6.1",
     "typescript": "^3.7.5",
+    "unzipper": "^0.10.7",
+    "xdg-basedir": "^4.0.0",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
     "@types/archiver": "^3.0.0",
+    "@types/express": "^4.17.2",
     "@types/fs-extra": "^8.0.1",
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.9.0",
+    "@types/multer": "^1.3.10",
     "@types/node": "^13.1.8",
     "@types/rsync": "^0.4.30",
+    "@types/supertest": "^2.0.8",
+    "@types/unzipper": "^0.10.1",
     "@types/yargs": "^15.0.1",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
     "ts-node": "^8.6.2"
   },
