--- a/package.json
+++ b/package.json
@@ -29,13 +29,10 @@
     "inquirer": "^7.0.4",
     "lodash.kebabcase": "^4.1.1",
     "multer": "^1.4.2",
-    "node-ssh": "^7.0.0",
     "ora": "^4.0.3",
     "os": "^0.1.1",
-    "rsync": "^0.6.1",
     "typescript": "^3.7.5",
     "unzipper": "^0.10.7",
-    "xdg-basedir": "^4.0.0",
     "yargs": "^15.1.0"
   },
   "devDependencies": {
@@ -46,12 +43,12 @@
     "@types/jest": "^24.9.0",
     "@types/multer": "^1.3.10",
     "@types/node": "^13.1.8",
-    "@types/rsync": "^0.4.30",
     "@types/supertest": "^2.0.8",
     "@types/unzipper": "^0.10.1",
     "@types/yargs": "^15.0.1",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "nock": "^11.7.2",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
     "supertest": "^4.0.2",
