ignore OS generated files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 node_modules
 .tmp
 tests/__server-dir-mock__
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
