--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "multer": "^1.4.2",
     "ora": "^4.0.3",
     "os": "^0.1.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5",
     "unzipper": "^0.10.7",
     "yargs": "^15.1.0"
@@ -43,6 +45,7 @@
     "@types/jest": "^24.9.0",
     "@types/multer": "^1.3.10",
     "@types/node": "^13.1.8",
+    "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "@types/unzipper": "^0.10.1",
     "@types/yargs": "^15.0.1",
